Changelog
=========

5.4-dev - (unreleased)
----------------------

5.3 - (2013-04-22)
------------------
* Bug fix: avoid misleading viewers saying that report is latest when it's not
  [tiberich #14356]

5.2 - (2013-02-25)
------------------
* Bug fix: Corrected missing i18n attributes for translations.
  [prospchr refs #13827]

5.1 - (2013-01-15)
------------------
* Change: removed figures macro since it's logic overlaps that of backward
  relations
  [ichimdav #10182]
* Feature: show/hide older versions using jquery
  [ichimdav #10182]

5.0 - (2012-11-22)
------------------
* Bug fix: use new api from eea.rdfmarshaller for serial title field
  [tiberich #3981]

4.9 - (2012-09-27)
------------------
* Bug fix: Cleanup zope.app.content.interfaces.IContentType dependency
  [voineali]
* Change: Update references to eea.depiction (formerly valentine.imagescales)
  [voineali refs #5497]

4.8 - (2012-07-13)
------------------
* Feature: use eea.relations widget if available for relatedItems
  [ichimdav #4705]
* Bug fix: use a max filesize validator for report file field
  [tiberich #5259]
* Bug Fix: Fixed duplicate key for translation in .pt
  [prospchr refs #5162]

4.7 - (2012-06-12)
------------------
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]
* Bug fix: use try/except in event handler to avoid error in
  eea.indicators test
  [tiberich]
* Bug fix: Fixed publications subobjects as after migration
  to Plone 4 was reseted to inherit from parent. Now available
  subojects will be those defined under portal_type.
  [ghicaale refs #5178]
* Change: Change code in eea.reports to fix translation problem
  [prospchr refs #5159]

4.6 - (2012-03-05)
------------------
* Bug fix: Fixed dependencies to eea.forms and eea.vocab
  [voineali]

4.5 - (2012-02-06)
------------------
* Bug fix: Removed eea.rdfmarshaller dependency
  [voineali]

4.4 - (2011-12-16)
------------------
* Bug fix: Made Publication file field non-required
  [voineali #4833]
